--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     - run: npm start
     - name: Commit and push if it changed
       run: |-
-        git config user.name "syyn"
+        git config user.name "44"
         git config user.email "94141577+9xN@users.noreply.github.com"
         git add -A
         timestamp=$(date '+%F %H:%M:%S %Z')
